@@ -24,7 +24,6 @@
 * @version $Id$
 */
 
-
 // PART (1) SHARED NOTE CREATION ==========================================================
 if (PGV_DEBUG) {
 	phpinfo(INFO_VARIABLES);
@@ -54,6 +53,10 @@ if (isset($_REQUEST['CALN'])) $CALN = $_REQUEST['CALN'];
 if (isset($_REQUEST['pid_array'])) 	$pid_array	 = $_REQUEST['pid_array'];
 if (isset($_REQUEST['pid'])) 		$pid		 = $_REQUEST['pid'];
 
+if (isset($_REQUEST['citation'])) 	$s_citation	 = $_REQUEST['citation'];
+if (isset($_REQUEST['locality'])) 	$c_addr		 = $_REQUEST['locality'];
+if (isset($_REQUEST['censYear'])) 	$c_yr		 = $_REQUEST['censYear'];
+
 if (!empty($NOTE)) {
 	$newlines = preg_split("/\r?\n/",$NOTE,-1);
 	for($k=0; $k<count($newlines); $k++) {
@@ -76,7 +79,7 @@ if (!empty($TITL)) {
 }
 if (!empty($AUTH)) $new_Notegedrec .= "1 AUTH $AUTH\n";
 if (!empty($PUBL)) {
-	$newlines = preg_split("/\r?\n/",$PUBL,-1,PREG_SPLIT_NO_EMPTY);
+	$newlines = preg_split("/\r?\n/", $PUBL, -1, PREG_SPLIT_NO_EMPTY);
 	for($k=0; $k<count($newlines); $k++) {
 		if ( $k==0 ) $new_Notegedrec .= "1 PUBL $newlines[$k]\n";
 		else $new_Notegedrec .= "2 CONT $newlines[$k]\n";
@@ -101,7 +104,11 @@ if (isset($xref_Note)) {
 	$closeparent="yes";
 	$link = "individual.php?pid=$pid&show_changes=yes";
 }
+// DEBUG ---------------------------------------
+	//	$xref_Note="Test";
+// ---------------------------------------------
 // End Part (1) ===========================================================================
+
 
 
 // PART (2) COPY CENSUS EVENT TO THE EXTRACTED PID's CREATION =============================
@@ -115,6 +122,8 @@ if (!$pid_array){
 // Cycle through each individual concerned defined by $cens_pids array. ======
 if ($idnums=="multi") {
 	foreach ($cens_pids as $pid) {
+	
+		// Get each entered individual's GEDREC ==============================
 		if (isset($pid)) {
 			$gedrec = find_updated_record($pid, PGV_GED_ID);
 			if (empty($gedrec)) $gedrec = find_gedcom_record($pid, PGV_GED_ID);
@@ -122,41 +131,120 @@ if ($idnums=="multi") {
 			$gedrec = find_updated_record($famid, PGV_GED_ID);
 			if (empty($gedrec)) $gedrec = find_gedcom_record($famid, PGV_GED_ID);
 		}
-
+		
 		// Variables for new_cens_gedrec =====================================
-		$cens_date="05 APR 1960";
-		$cens_plac="Withnell, Lancashire";
-		$cens_addr="Brinscall Station, School Lane";
-		$cens_pid_age="3y";
-		$cens_sour="S2";
-		$cens_sour_citation="RG12/3419/131/16";
-		$cens_note_level="2";
-		$cens_obje_level="3";
-		$cens_obje_id="M457";
-		$cens_note_id=$xref_Note;
-
-		// New Census event ==================================================
+		// Census Date ---------------------------
+		if (isset($c_yr)) {
+			$cens_DATE=$c_yr; 
+		} else { 
+			$cens_DATE=""; 
+		}
+		// Census Place --------------------------
+		if (isset($c_addr)) {
+			$cens_PLAC=$c_addr;
+		} else { 
+			$cens_PLAC=""; 
+		}
+		// Census Address ------------------------
+		if (isset($c_addr)) {
+			$addr_lines = explode(", ", $c_addr);
+			$i = 0; 
+			foreach ($addr_lines as $aline) {
+				if ($i==0) {
+					$cens_ADDR  = "2 ADDR ".$aline."\n";
+				}else{
+					$cens_ADDR .= "3 CONT ".$aline."\n";
+				}
+				$i++;
+			}
+		} else { 
+			$cens_ADDR=""; 
+		}
+		// Census Indi age -----------------------
+		/*
+		$cens_pid_AGE="";
+		*/
+		// Source ID -----------------------------
+		if (isset($text[0])) {
+			$cens_SOUR_id=$text[0];
+		} else { 
+			$cens_SOUR_id=""; 
+		}
+		// Source Citation -----------------------
+		if (isset($s_citation)) {
+			$cens_SOUR_PAGE=$s_citation;
+		} else { 
+			$cens_SOUR_PAGE=""; 
+		}
+		// Source Date of Entry into original ----
+		if (isset($c_yr)) {
+			$cens_SOUR_DATE=$c_yr; 
+		} else { 
+			$cens_SOUR_DATE=""; 
+		}
+		// Multimedia Object ---------------------
+		$cens_OBJE_level="3";
+		if (isset($text[1])) {
+			$cens_OBJE_id=$text[1];
+		} else { 
+			$cens_OBJE_id=""; 
+		}
+		// Shared Note ---------------------------
+		$cens_NOTE_level="2";
+		$cens_NOTE_id=$xref_Note;
+		
+		
+		// New Census event to be added =========================================
 		$new_cens_event_gedrec  = "\n";
 		$new_cens_event_gedrec .= "1 CENS"."\n";
-		$new_cens_event_gedrec .= "2 DATE ".$cens_date."\n";
-		$new_cens_event_gedrec .= "2 PLAC ".$cens_plac."\n";
-		$new_cens_event_gedrec .= "2 ADDR ".$cens_addr."\n";
-		$new_cens_event_gedrec .= "2 AGE  ".$cens_pid_age."\n";
-		$new_cens_event_gedrec .= "2 SOUR @".$cens_sour."@"."\n";
-		$new_cens_event_gedrec .= "3 PAGE ".$cens_sour_citation."\n";
+		$new_cens_event_gedrec .= "2 DATE ".$cens_DATE."\n";
+		$new_cens_event_gedrec .= "2 PLAC ".$cens_PLAC."\n";
+		// $new_cens_event_gedrec .= "2 ADDR ".$cens_ADDR."\n";
+		$new_cens_event_gedrec .= $cens_ADDR;
+		// $new_cens_event_gedrec .= "2 AGE  ".$cens_pid_AGE."\n";
+		$new_cens_event_gedrec .= "2 SOUR @".$cens_SOUR_id."@"."\n";
+		$new_cens_event_gedrec .= "3 PAGE ".$cens_SOUR_PAGE."\n";
 		$new_cens_event_gedrec .= "3 DATA"."\n";
-		$new_cens_event_gedrec .= "4 DATE ".$cens_date."\n";
-		$new_cens_event_gedrec .= $cens_obje_level." OBJE @".$cens_obje_id."@"."\n";
-		$new_cens_event_gedrec .= $cens_note_level." NOTE @".$cens_note_id."@"."\n";
+		$new_cens_event_gedrec .= "4 DATE ".$cens_SOUR_DATE."\n";
+		$new_cens_event_gedrec .= $cens_OBJE_level." OBJE @".$cens_OBJE_id."@"."\n";
+		$new_cens_event_gedrec .= $cens_NOTE_level." NOTE @".$cens_NOTE_id."@"."\n";
 
-		// Append New Census event to gedrec =================================== 
+		// Append New Census event to gedrec ==================================== 
 		$new_cens_event_gedrec_updated = $gedrec . $new_cens_event_gedrec . "\n";
+		
+		// DEBUG ================================================================
+		/*
+		echo "<br /><br />";
+		echo "DEBUG -----------------------------------------------------------";
+		echo "<br /><br />";
+		// echo "CENS ADDR = ".$cens_addr;
+		// echo "<br />";
+		// echo "Locality = ".$s_addr;
+		// echo "<br />";
+		// echo "CENS Date = ".$c_yr;
+		// echo "<br />";
+		// echo "SOUR = ".$cens_sour_id;
+		// echo "<br />";
+		// echo "SOUR Citation = ".$cens_sour_citation;
+		// echo "<br />";
+		// echo "MEDIA ID = ".$cens_obje_id;
+		// echo "<br /><br />";
+		echo "<b>NEW CENS EVENT - APPENDED GEDREC:</b>".str_replace("\n", "<br />", $new_cens_event_gedrec);
+		echo "<br />";
+		echo "END DEBUG -------------------------------------------------------";
+		echo "<br /><br />";
+		echo "<br /><br />";
+		echo "<br /><br />";
+		*/
+		// ======================================================================
 
-		// Replace Indi GEedrec with newly added Census event ================== 
+		// Replace Indi GEedrec with newly added Census event =================== 
 		$success = replace_gedrec($pid, $new_cens_event_gedrec_updated);
 
 	} // end foreach $cens_pids  -------------
 }
 // End Part (2) ===========================================================================
+
+
 
 ?>
